# ansible-pmm-admin

./: README.md  galaxy.yml  pmm_admin.py  pyproject.toml
.github/workflows/: publish.yaml
examples/: args.json  playbook.yml
meta/: runtime.yml
plugins/modules/: pmm_admin.py
