[tool.poetry]
name = "ansible-pmm-admin"
version = "0.1.0"
description = ""
authors = ["Alex Orfanos <me@aorfanos.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.10.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
